fixed scrollbar weirdness in header

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -32,6 +32,7 @@ a:visited {
 
 .ui-layout-north {
     max-height: 50px;
+    overflow: hidden;
 }
 
 .nzbBtn {
